Use data type converter to convert base64. (bunq/sdk_java#42)